kubernetes/apps/home-assistant/app/add-on/node-red/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
  namespace: home-assistant
  labels:
    app: node-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
    spec:
      containers:
        - name: node-red
          image: nodered/node-red:latest
          ports:
            - containerPort: 1880
              name: node-red-ui
          securityContext:
            privileged: true
          volumeMounts:
            - name: node-red-data
              mountPath: /data
      volumes:
        - name: node-red-data
          hostPath:
            path: /mnt/nfs/AppData/home-assistant/node-red
            type: Directory
