kubernetes/apps/home-assistant/app/add-on/node-red/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red
  namespace: home-assistant
spec:
  selector:
    app: node-red
  type: ClusterIP
  ports:
    - name: node-red-ui
      port: 1880
      protocol: TCP
      targetPort: node-red-ui
