kubernetes/apps/home-assistant/app/add-on/node-red/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-red-ingress
  namespace: home-assistant
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: node-red.home-assistant.cluster.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: node-red
                port:
                  number: 1880
